feat: basic visual regression test functionality

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ cli/tests/.test_coverage/
 # WPT generated cert files
 /tools/wpt/certs/index.txt*
 /tools/wpt/certs/serial*
+
+# snapshot candidates
+**/.candidate/*
