--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: macos-latest # because linux generates different snapshots with puppeteer
     steps:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
@@ -27,9 +27,7 @@ jobs:
       - continue-on-error: true
         run: deno fmt --check
       - run: deno task install-puppeteer
-      - uses: docker-practice/actions-setup-docker@master
-      - uses: isbang/compose-action@v1.1.0
-      - run: IS_PIPELINE=true deno test --allow-all
+      - run: deno test --allow-all
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
