--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,16 @@ jobs:
         with:
           name: snapshots
           path: test/snapshots
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write # This is required to allow the GitHub Action to authenticate with Deno Deploy.
+      contents: read
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
+      - name: Deploy to Deno Deploy
+        uses: denoland/deployctl@v1
+        with:
+          project: bkosm # the name of the project on Deno Deploy
+          entrypoint: main.ts # the entrypoint to deploy
