--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,13 +35,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     permissions:
-      id-token: write # This is required to allow the GitHub Action to authenticate with Deno Deploy.
+      id-token: write
       contents: read
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v3
-      - name: Deploy to Deno Deploy
-        uses: denoland/deployctl@v1
+      - uses: actions/checkout@v3
+      - uses: denoland/deployctl@v1
         with:
-          project: bkosm # the name of the project on Deno Deploy
-          entrypoint: main.ts # the entrypoint to deploy
+          project: bkosm
+          entrypoint: main.ts
