--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,6 +37,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    needs: test
     steps:
       - uses: actions/checkout@v3
       - uses: denoland/deployctl@v1
