chore: ignore actual files too

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,6 @@ cli/tests/.test_coverage/
 /tools/wpt/certs/index.txt*
 /tools/wpt/certs/serial*
 
-# snapshot diffs
+# snapshots
 **/diff.*.png
+**/actual.*.png
