fix: make env in the pipeline

--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,7 @@
   "tasks": {
     "start": "deno run -A --watch=static/,routes/ dev.ts",
     "install-puppeteer": "PUPPETEER_PRODUCT=chrome deno run -A --unstable https://deno.land/x/puppeteer@14.1.1/install.ts",
-    "make-env": "echo 'IS_PROD=false' >> .env",
+    "make-env": "cp .env.template .env",
     "update-snapshots": "deno test --allow-all -- --update && deno task update-snap-readme",
     "update-snap-readme": "deno run --allow-all test/__snapshots__/generate_readme.ts",
     "approve-snapshots": "deno run --allow-all test/__snapshots__/approve_all.ts"
