--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,6 +29,7 @@ jobs:
       - continue-on-error: true
         run: deno fmt --check
       - run: deno task install-puppeteer
+      - run: deno task make-env
       - run: deno test --allow-all
       - uses: actions/upload-artifact@v3
         if: failure()
