fix: gitalk source as env

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,4 @@
 IS_PROD=false
 STATIC_DIR_ROOT=http://localhost:8000
+GITALK_CSS=https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css
+GITALK_JS=https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js
